envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
                      path: "/dev/stdout"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: httpbin
                            idle_timeout: 15s
                            rate_limits:
                              - actions:
                                  - { remote_address: {} }
                http_filters:
                  - name: envoy.rate_limit
                    config:
                      domain: example
                      stage: 0
                      failure_mode_deny: true
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: rate_limit_cluster
                          timeout: 0.25s
                  - name: envoy.router
  clusters:
    - name: httpbin
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            protocol: TCP
            address: httpbin.org
            port_value: 80
    - name: rate_limit_cluster
      type: strict_dns
      connect_timeout: 0.25s
      lb_policy: round_robin
      http2_protocol_options: {}
      hosts:
        - socket_address:
            protocol: TCP
            address: ratelimit
            port_value: 8081
